@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2023-09-25T08:18:04Z",
+  "timestamp" : "2023-09-25T16:18:26Z",
   "count_outdated" : 850,
   "uniques_outdated" : 500,
-  "count" : 874,
+  "count" : 875,
   "uniques" : 515,
   "clones" : [
     {
@@ -97,9 +97,9 @@
     },
     {
       "timestamp": "2023-09-25T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
+      "count": 3,
+      "count_minmax": [ 2, 3 ],
+      "count_decinc": [ 0, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
