@@ -1,5 +1,5 @@
 {
-  "count": 24,
+  "count": 25,
   "uniques": 2,
   "clones": [
     {
@@ -54,7 +54,7 @@
     },
     {
       "timestamp": "2023-09-25T00:00:00Z",
-      "count": 2,
+      "count": 3,
       "uniques": 2
     }
   ]
